--- a/GetUpList.html
+++ b/GetUpList.html
@@ -1,11 +1,11 @@
-CTYPE html>
-<html ng="ja">
-	<head>
-	<meta http-equiv="CONTENE" cont
-	ent="text/html; charstf-8" />
-	<tieect Test</title
-<d>
-<body>ECT DATA="./GetUpList.txt"TYext/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta http-equiv="CONTENT-TYPE" cont
+ent="text/html; charset=utf-8" />
+<title>Object Test</title>
+</head>
+<body>
+<OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
 </body>
 </html>
-
