--- a/GetUpList.html
+++ b/GetUpList.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="CONTENT-TYPE" cont
 ent="text/html; charset=utf-8" />
-<p>ここが段落になります。</p>
+<h1>ここが段落になります。</h1>
 <title>Object Test</title>
 </head>
 <body>
