--- a/GetUpList.html
+++ b/GetUpList.html
@@ -6,6 +6,6 @@ ent="text/html; charset=utf-8" />
 <title>Object Test</title>
 </head>
 <body>
-<OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="200%"></OBJECT>
+<OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="1000"></OBJECT>
 </body>
 </html>
