--- a/GetUpList.html
+++ b/GetUpList.html
@@ -6,6 +6,7 @@ ent="text/html; charset=utf-8" />
 <title>Object Test</title>
 </head>
 <body>
-<OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="1000"></OBJECT>
+  <p style="background-color:red;width:500px;height:500px;"></p>
+<OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
 </body>
 </html>
