--- a/GetUpList.html
+++ b/GetUpList.html
@@ -5,8 +5,10 @@
 ent="text/html; charset=utf-8" />
 <title>Object Test</title>
 </head>
+<style>
 <body>
   <p style="background-color:red;width:500px;height:500px;"></p>
 <OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
 </body>
+</style>
 </html>
