--- a/GetUpList.html
+++ b/GetUpList.html
@@ -5,10 +5,13 @@
 <meta http-equiv="CONTENT-TYPE" cont
 ent="text/html; charset=utf-8" />
 <title>Object Test</title>
+    body{
+      color: gray;
+    }
   </style>
 </head>
 <body>
-  <p style="background-color:red;width:500px;height:500px;"></p>
+<p style="background-color:red;width:500px;height:500px;"></p>
 <OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
 
 </body>
