--- a/GetUpList.html
+++ b/GetUpList.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <style>
 <meta http-equiv="CONTENT-TYPE" cont
 ent="text/html; charset=utf-8" />
 <title>Object Test</title>
-    body{
-      color: gray;
-    }
+  <style>
+    .box5 {
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    border: double 5px #4ec4d3;
+}
+.box5 p {
+    margin: 0; 
+    padding: 0;
+}
   </style>
 </head>
 <body>
+  <div class = "box5">
 <p style="background-color:red;width:500px;height:500px;"></p>
 <OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
-
+  </div>
 </body>
 </html>
