--- a/GetUpList.html
+++ b/GetUpList.html
@@ -6,6 +6,8 @@ ent="text/html; charset=utf-8" />
 <title>Object Test</title>
   <style>
     .box5 {
+     width:500px;
+      height:500px;
     padding: 0.5em 1em;
     margin: 2em 0;
     border: double 5px #4ec4d3;
