--- a/GetUpList.html
+++ b/GetUpList.html
@@ -48,8 +48,8 @@ h1::after {
   </style>
 </head>
 <body>
+  <h1>目覚まし時計!</h1>
   <div class = "box5">
-
 <OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
   </div>
 </body>
