--- a/GetUpList.html
+++ b/GetUpList.html
@@ -5,9 +5,13 @@
 ent="text/html; charset=utf-8" />
 <title>Object Test</title>
   <style>
+   
+  body{
+    font-family: "メイリオ", meiryo;
+    font-size:120%;
+    }
     
-    
-    h1 {
+  h1 {
   position: relative;
   padding: .75em 1em;
   background-color: #f0f0f0;
