--- a/GetUpList.html
+++ b/GetUpList.html
@@ -8,7 +8,7 @@ ent="text/html; charset=utf-8" />
    
   body{
     font-family: "メイリオ", meiryo;
-    font-size:200%;
+    font-size:40;
     }
     
   h1 {
