--- a/GetUpList.html
+++ b/GetUpList.html
@@ -8,7 +8,7 @@ ent="text/html; charset=utf-8" />
    
   body{
     font-family: "メイリオ", meiryo;
-    font-size:40;
+    font-size:20;
     }
     
   h1 {
@@ -44,6 +44,8 @@ h1::after {
     border: double 5px #4ec4d3;
 }
 .box5 p {
+    font-family: "メイリオ", meiryo;
+    font-size:20;
     width:100px;
     height:100px;
     margin: 0; 
