--- a/GetUpList.html
+++ b/GetUpList.html
@@ -8,7 +8,7 @@ ent="text/html; charset=utf-8" />
    
   body{
     font-family: "メイリオ", meiryo;
-    font-size:20;
+    font-size:20px;
     }
     
   h1 {
@@ -45,7 +45,7 @@ h1::after {
 }
 .box5 p {
     font-family: "メイリオ", meiryo;
-    font-size:20;
+    font-size:16px;
     width:100px;
     height:100px;
     margin: 0; 
