--- a/GetUpList.html
+++ b/GetUpList.html
@@ -42,6 +42,7 @@ h1::after {
     padding: 0.5em 1em;
     margin: 2em 0;
     border: double 5px #4ec4d3;
+    position:reative;
     top:1000px;
     left:1000px;
 }
