--- a/GetUpList.html
+++ b/GetUpList.html
@@ -43,8 +43,8 @@ h1::after {
     margin: 2em 0;
     border: double 5px #4ec4d3;
     position:reative;
-    top:1000px;
-    left:1000px;
+    top:500px;
+    left:500px;
 }
 .box5 p {
     font-family: "メイリオ", meiryo;
@@ -60,6 +60,9 @@ h1::after {
 <body>
    <h1>目覚まし時計!</h1>
   <div class = "box5">
+    position:reative;
+    top:500px;
+    left:500px;
 <OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
   </div>
 </body>
