--- a/GetUpList.html
+++ b/GetUpList.html
@@ -37,7 +37,7 @@ h1::after {
 }
  
     .box5 {
-    background:pink;
+    background:green;
     width:1000px;
     height:1000px;
     padding: 0.5em 1em;
@@ -49,7 +49,7 @@ h1::after {
 }
 .box5 p {
     font-family: "メイリオ", meiryo;
-    font-size:16px;
+    font-size:50px;
     width:100px;
     height:100px;
     margin: 0; 
@@ -61,9 +61,6 @@ h1::after {
 <body>
    <h1>目覚まし時計!</h1>
   <div class = "box5">
-    position:reative;
-    top:500px;
-    left:500px;
 <OBJECT DATA="./GetUpList.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
   </div>
 </body>
