--- a/GetUpList.html
+++ b/GetUpList.html
@@ -46,6 +46,7 @@ h1::after {
     position:reative;
     top:500px;
     left:500px;
+      font-size:50px;
 }
 .box5 p {
     font-family: "メイリオ", meiryo;
